--- a/ai-un-blog/src/app/components/navbar/navbar.module.css
+++ b/ai-un-blog/src/app/components/navbar/navbar.module.css
@@ -4,12 +4,22 @@
     justify-content: space-between;
     height: 100px;
     background-color: #334B7B;
+    padding: 0 20px;
   }
   
-  .social {
-    display: flex;
+  .donate {
     gap: 10px;
     flex: none; /* Prevents the social section from stretching */
+    background-color: #48BB78;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #F7FAFC;
+    font-family: 'Gabarito';
+    border-radius: 9px;
   }
   
   .logo {
@@ -17,7 +27,8 @@
     text-align: left; /* Aligns the logo to the left */
     font-size: 36px;
     font-weight: bold;
-    color: #48BB78
+    color: #48BB78;
+    
   }
   
   .links {
