--- a/ai-un-blog/src/app/components/navbar/navbar.module.css
+++ b/ai-un-blog/src/app/components/navbar/navbar.module.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: black;
+    color: white;
     font-family: 'Gabarito';
     border-radius: 9px;
     font-weight: bold;
