--- a/ai-un-blog/src/app/posts/[slug]/singlePage.module.css
+++ b/ai-un-blog/src/app/posts/[slug]/singlePage.module.css
@@ -13,19 +13,26 @@
 }
 
 .title {
-    font-size: 55px;
-    margin-bottom: 50px;
+    font-size: 2em;
+    padding-bottom: 20px;
+}
+
+.divider {
+    height: 1px;
+    background-color: black;
 }
 
 .user {
     display: flex;
     align-items: center;
-    gap: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    gap: 5px;
 }
 
 .username {
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 300;
 }
 
 .avatar {
@@ -34,17 +41,18 @@
 }
 
 .userTextContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
     color: gray;
+    font-size: 12px;
 
 }
 
 .userImageContainer {
-    width: 50px;
-    height: 50px;
     position: relative;
+}
+
+.description {
+    font-style: italic;
+    color: gray;
 }
 
 .imageContainer {
@@ -55,6 +63,7 @@
 
 .image {
     object-fit: cover;
+    border-radius: 9px;
 }
 
 .content {
