--- a/ai-un-blog/src/app/posts/[slug]/singlePage.module.css
+++ b/ai-un-blog/src/app/posts/[slug]/singlePage.module.css
@@ -1,5 +1,5 @@
 .container {
-    
+
 }
 
 .infoContainer {
@@ -53,12 +53,14 @@
 .description {
     font-style: italic;
     color: gray;
+    font-size: 20px;
 }
 
 .imageContainer {
     flex: 1;
     height: 350px;
     position: relative;
+    margin-top: 10px;
 }
 
 .image {
@@ -77,7 +79,16 @@
 }
 
 .body p {
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 300;
     margin-bottom: 20px;
+    line-height: 25px;
+}
+
+.body h2 {
+    font-size: 1.4em;
+}
+
+.body h1 {
+    font-size: 1.9em;
 }
