--- a/ai-un-blog/src/components/featured/featured.module.css
+++ b/ai-un-blog/src/components/featured/featured.module.css
@@ -8,7 +8,12 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.bold {
+.boldAI {
+    font-weight: 600;
+    color: #4299E1;
+}
+
+.boldCongress {
     font-weight: 600;
     color: #4299E1;
 }
