--- a/src/components/featured/featured.module.css
+++ b/src/components/featured/featured.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-    font-size: 30px;
+    font-size: 1.7em;
     font-weight: 400;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -17,5 +17,12 @@
     font-weight: 600;
     color: #4299E1;
 }
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 1.3em;
+    }
+}
+
 
 
