--- a/src/components/mainFeature/mainfeature.module.css
+++ b/src/components/mainFeature/mainfeature.module.css
@@ -110,11 +110,11 @@
   }
 
   .postTitle {
-    font-size: 18px; /* ✅ Smaller title for mobile */
+    font-size: 1.5em; /* ✅ Smaller title for mobile */
 }
 
 .userInfo {
-    font-size: 0.9em; /* ✅ Slightly smaller user info */
+    font-size: 0.8em; /* ✅ Slightly smaller user info */
 }
 
 .featuredMarker {
