--- a/src/components/featureList/featurelist.module.css
+++ b/src/components/featureList/featurelist.module.css
@@ -1,4 +1,5 @@
 .container {
+    display: flex;
     position: relative;
     width: 100%;
     height: 100%;
@@ -6,19 +7,55 @@
 }
 
 .listContainer {
+    display: flex;
     position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    min-height: 300px;
+}
+
+.list {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    list-style-type: none;
+    font-weight: 500;
+    font-size: 1.1em;
+    line-height: 30px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
 
-.list {
-    list-style-type: none;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 90px;
+.listItem {
+    flex: 1;
+    align-items: center;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 .divider {
     height: 1px;
     background-color: black;
+    width: 100%;
+    margin-top: 5px;
+}
+
+@media (max-width: 768px) {
+    .list {
+        font-size: 16px;
+        line-height: 24px;
+        gap: 10px;
+    }
+
+    .listItem {
+        padding: 15px 0;
+    }
+
+    .container {
+        padding-left: 10px; /* Reduce padding for smaller screens */
+    }
 }
