--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -59,6 +59,10 @@
       padding: 10px;
       border-radius: 9px;
     }
+
+    .desc {
+      font-size: .9em;
+    }
   }
 
   @media screen and (max-width: 1280px) {
