--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -59,6 +59,9 @@
     .logo {
       text-align: left;
     }
+    .links {
+      font-size: small;
+    }
   }
   
   @media screen and (max-width: 768px) {
@@ -73,5 +76,14 @@
     }
     .link {
       display: none;
+    }
+    .donate {
+      display: none;
+    }
+    .logo {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
     }
   }
